[tool.poetry]
name = "qc-quantum-linear-systems"
version = "0.1.0"
description = "Quantum algorithms to solve linear systems of equations."
authors = ["dmark04 <dmark04@web.de>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
classiq = "^0.29.0"
qiskit = ">=0.43.0, <0.45.0"
qiskit-algorithms = ">=0.2.1, <0.3.0"
matplotlib = "^3.8.0" # this version could possible be even lower
numpy = ">=1.23.0"
trackhhl = {git = "https://github.com/dmark04/TrackHHL", rev= "1bf9b73f84d5734892787d150148feaed2bfd0c1"}
quantum-linear-solvers = "^0.1.1"
#vqls-prototype = {git = "https://github.com/QuantumApplicationLab/vqls-prototype", rev = "2853fb07e416fd766ac13e34dedb6b949342c5e2"}
vqls-prototype = "^0.1.0"


[tool.poetry.group.test.dependencies]
pre-commit = "^3.5.0"
pytest-cov = "^4.1.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
